--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +7,19 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <com.devbrackets.android.exomedia.ui.widget.VideoView
-       android:id="@+id/arVideoView"
-       android:layout_width="match_parent"
-       android:layout_height="300dp" />
 
    <fragment
-       app:layout_constraintTop_toBottomOf="@id/arVideoView"
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        />
 
-</LinearLayout>
+   <com.devbrackets.android.exomedia.ui.widget.VideoView
+       android:id="@+id/arVideoView"
+       android:elevation="7dp"
+       android:layout_centerInParent="true"
+       android:layout_width="match_parent"
+       android:layout_height="300dp" />
+
+</RelativeLayout>
